fix navigation spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 		background: lightblue;
 	}
 	#nav ul {
-		padding: 0.25em;
+		padding: 0.25em 0.25em 0.25em 0.5em;
 	}
 	#nav ul li {
 		display: inline;
